--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
+<meta name="google-site-verification" content="865U5EhIvzhHnlEJ6T8ogT5oAxDg71XXrO0pY2zuoG4" />
 <meta http-equiv="refresh" content="0;url=https://telegram.me/s/QuvonchbekBobojonov" />
